# async-data-pipeline

./: .dockerignore  .env.example  .pre-commit-config.yaml  AUDIT_REPORT.md  AVRO_IMPLEMENTATION.md  AVRO_SERIALIZATION_IMPLEMENTATION.md  Dockerfile  Makefile  README.md  alembic.ini  context.md  docker-compose.yml  init-db.sql  pyproject.toml
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: __init__.py  health.py  jobs.py
app/api/v1/schemas/: __init__.py  health.py  jobs.py
app/cache/: redis_client.py
app/consumer/: dedup.py  worker.py
app/consumer/processors/: enrich.py  fraud.py
app/core/: config.py  logger.py
app/db/: __init__.py  base.py  models.py  session.py
app/db/alembic/: alembic.ini  env.py
app/db/alembic/versions/: 0001_create_order_event_table.py
app/producer/: main.py  security.py
app/producer/schemas/: order_event.avsc
app/read_api/: __init__.py  main.py
app/services/: processor.py
app/workers/: worker.py
async-kafka-pipeline/: .gitignore  AVRO_IMPLEMENTATION.md  AVRO_SERIALIZATION_IMPLEMENTATION.md  Makefile  README.md  docker-compose.yml  pyproject.toml
async-kafka-pipeline/app/: pydantic_schema.py
async-kafka-pipeline/app/cache/: redis_client.py
async-kafka-pipeline/app/common/: avro_kafka_client.py  kafka_client.py  logging.py  metrics.py
async-kafka-pipeline/app/consumer/: worker.py
async-kafka-pipeline/app/consumer/processors/: enrichment.py  fraud.py
async-kafka-pipeline/app/db/: database.py  models.py  repository.py
async-kafka-pipeline/app/producer/: avro_utils.py  main.py  schemas.py
async-kafka-pipeline/app/producer/schemas/: order_event.avsc
async-kafka-pipeline/configs/: prometheus.yml
async-kafka-pipeline/scripts/: init_db.py
async-kafka-pipeline/tools/: event_generator.py  event_producer.py  health_check.py  monitoring_setup.py  test_api.py  test_avro_integration.py  test_avro_schema.py
ci/github/workflows/: build-push.yml  deploy.yml  lint-test.yml  nightly-dbt.yml
configs/: alert_rules.yml  logging.yaml  otel.yaml  prometheus.yml
configs/grafana/dashboards/: kafka-pipeline-dashboard.json
dbt/: dbt_project.yml  profiles.yml
dbt/models/: conversion_funnel.sql  daily_sales.sql
dbt/profiles/: README.md
infra/terraform/: backend.tf  budgets.tf  ecs.tf  main.tf  msk.tf  networking.tf  observability.tf  outputs.tf  providers.tf  rds.tf  redis.tf  s3.tf  terraform.tfvars.example  variables.tf
migrations/: env.py  script.py.mako
migrations/versions/: 001_initial_migration.py
scripts/: run_migrations.py  run_worker.py
tests/integration/: test_consumer.py  test_producer.py
tests/load/: test_placeholder.py  test_simulator.py
tests/unit/: test_dedup.py  test_replay.py  test_schema.py
tools/: replay.py  simulator.py
