[tool.poetry]
name = "async-data-pipeline"
version = "0.1.0"
description = "packages for backend wizardry"
authors = ["Sanjay DV <55549923+sdv1708@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
asyncpg = "^0.30.0"
alembic = "^1.16.4"
pydantic = "^2.11.7"
loguru = "^0.7.3"
python-dotenv = "^1.1.1"
redis = "^6.2.0"
rq = "^2.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
