[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "async-kafka-pipeline"
version = "0.1.0"
description = "Async Kafka pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "aiokafka",
    "fastavro",
    "sqlmodel",
    "asyncpg",
    "alembic",
    "redis",
    "boto3",
    "structlog",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-exporter-otlp",
    "prometheus-client",
    "faker",
    "pytest",
    "pytest-asyncio",
    "testcontainers",
    "black",
    "isort",
    "ruff",
    "mypy"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.12"
