[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "async-data-pipeline"
version = "0.1.0"
description = "Async data pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "aiokafka",
    "fastavro",
    "sqlmodel",
    "asyncpg",
    "alembic",
    "redis",
    "structlog",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-exporter-otlp",
    "prometheus-client",
    "faker",
    "pytest",
    "pytest-asyncio",
    "testcontainers",
    "black",
    "isort",
    "ruff",
    "mypy"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.12"
