[tool.poetry]
name = "async-kafka-pipeline"
version = "0.1.0"
description = "Learning Kafka with async Python"
authors = ["Your Name <your.email@example.com>"]
python = "^3.12"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.5.0"
structlog = "^24.0.0"
httpx = "^0.27.0"
faker = "^20.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
ruff = "^0.4.0"
ipython = "^8.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"