[tool.poetry]
name = "async-kafka-pipeline"
version = "0.1.0"
description = "Learning Kafka with async Python"
authors = ["Sanjay DV <sanjaydv@umd.edu>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.5.0"
structlog = "^24.0.0"
httpx = "^0.27.0"
faker = "^20.0.0"
aiokafka = "^0.12.0"
confluent-kafka = "^2.11.0"
sqlmodel = "^0.0.24"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
alembic = "^1.16.4"
redis = {extras = ["hiredis"], version = "^6.4.0"}
prometheus-client = "^0.22.1"
opentelemetry-api = "^1.36.0"
opentelemetry-sdk = "^1.36.0"
opentelemetry-instrumentation-fastapi = "^0.57b0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
ruff = "^0.4.0"
ipython = "^8.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"